# probes

add_subdirectory(probe_wgc_preview)
add_subdirectory(probe_wasapi_endpoint)
add_subdirectory(probe_process_loopback)
add_subdirectory(probe_nvenc)
add_subdirectory(probe_wgc_nvenc)
add_subdirectory(probe_wgc_nvenc_gpu)
add_subdirectory(probe_mf_aac_encode)
add_subdirectory(probe_wgc_nvenc_aac_mkv)
